@@ -69,6 +69,7 @@ o use global variables directory /etc/indimail/control/global_vars for
 38. indimail-mta.spec, PKGBUILD, debian pre/post: skip service if dir doesn't
     exist
 39. svctool: allow default queue parameters for fetchmail service
+40. instcheck.c: do chmod after chown to prevent losing setuid bit
 
 * 
 Release 2.13 Start 14/02/2021
